# devops-infotecs

./: Readme.md
prj/: CMakeLists.txt  Dockerfile  Readme_compile_task  Readme_docker_task  setup_docker_ubuntu.sh
prj/VirtMachineCentOS/: build_centos7.sh  centos7.json
prj/VirtMachineCentOS/scripts/: base.sh  compile_sqlite_so.sh  setup_docker_centos7.sh
prj/VirtMachineCentOS/scripts/app/: setup_packer_1.7.6.sh  setup_virtualbox-7_0_ubuntu.sh
prj/conan_project/: CMakeLists.txt  build.sh  conanfile.py  main.cpp
